[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-aem-forward-win"
version = "1.0.3"
description = "Time-domain airborne electromagnetic forward modelling for Windows"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Ross C Brodie", email = "ross.c.brodie@ga.gov.au" }]
keywords = ["electromagnetic", "geophysics"]
dependencies = [
    "numpy",
    "matplotlib"
]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gatdaem1d = ['gatdaem1d.*', '*.dll', 'libfftw3-3.dll', 'libfftw3f-3.dll']
